--- a/0810.3328/IntroPartPhysics.tex
+++ b/0810.3328/IntroPartPhysics.tex
@@ -40,17 +40,35 @@
 \usepackage{bm}% bold math
 
 
-\usepackage[margin=1in]{geometry}
+%\usepackage[margin=1in]{geometry}
 
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{multirow}
 \usepackage{rotating}
-\usepackage{palatino, url, multicol}
+%\usepackage{palatino, url, multicol}
+\usepackage{url, multicol}
 \usepackage{amssymb}
-\usepackage{hyperref}
+%\usepackage{hyperref}
 
-\topmargin 0pt
+\usepackage{mathpazo}
+\linespread{1.05}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[letterpaper, margin=1.3in]{geometry}
+\sloppy
 
 %***********************************************************************************************
 \def\beq{\begin{equation}}
@@ -155,12 +173,12 @@ the many gaps left by this paper.
 
 %******************************************************************
 
-\addtolength{\parskip}{0.8\baselineskip}
-\parindent 0pt
-
 \tableofcontents
 
 \newpage
+
+%\addtolength{\parskip}{0.8\baselineskip}
+%\parindent 0pt
 
 \section{Part I --- Preliminary Concepts}
 
@@ -4008,18 +4026,18 @@ differential operator acting on $\psi$ that results in
 
 Dirac's approach was to find an operator of the form 
 \begin{eqnarray}
-\displaystyle{\not} D = \gamma^{\mu}\partial_{\mu} = \gamma^0\partial_0
+\not \mathrel D = \gamma^{\mu}\partial_{\mu} = \gamma^0\partial_0
 + \gamma^1\partial_1 + \gamma^2\partial_2 + \gamma^3 \partial_3\nolabel
 \end{eqnarray}
 where the $\gamma$'s are $2\times 2$ matrices, and the equation of
-motion is then $\displaystyle{\not} D\psi = -im\psi$.  The challenge is
+motion is then ${\displaystyle{\not}D}\psi = -im\psi$.  The challenge is
 in finding the appropriate $2\times 2$ $\gamma$ matrices.  Dirac
 reasoned that, in order to be properly relativistic, operating twice
-with $\displaystyle{\not} D$ should give the Klein Gordon equation.  In
+with ${\displaystyle{\not}D}$ should give the Klein Gordon equation.  In
 other words, 
 \begin{eqnarray}
-\displaystyle{\not}D = -im\psi &\Rightarrow& \displaystyle{\not} D
-\displaystyle{\not} D \psi = -im \displaystyle{\not} D \psi \nolabel \\
+{\displaystyle{\not}D} = -im\psi &\Rightarrow& {\displaystyle{\not}D}
+{\displaystyle{\not}D} \psi = -im {\displaystyle{\not}D} \psi \nolabel \\
 &\Rightarrow& \gamma^{\mu}\partial_{\mu}\gamma^{\nu}\partial_{\nu}\psi
 = -im(-im\psi) \nolabel \\
 &\Rightarrow& \gamma^{\mu}\gamma^{\nu}\partial_{\mu}\partial_{\nu} \psi
@@ -4050,7 +4068,7 @@ which is exactly the Klein Gordon equation (\ref{eq:kleingordon}).
 
 So, we have the Dirac equation
 \begin{eqnarray}
-\big(\displaystyle{\not} D + im \big) \psi = 0 \label{eq:dirac}
+\big({\displaystyle{\not}D} + im \big) \psi = 0 \label{eq:dirac}
 \end{eqnarray}
 but we still have a problem.  Namely, there does not exist a set of
 $2\times 2$ matrices that solve (\ref{eq:clifford}).  Nor does there
@@ -7620,8 +7638,8 @@ The elementary matter particles all have half-integer spin (so are
 fermions) and the elementary non-matter particles all have integer spin
 (so are bosons). We can then observe that an equivalent grouping is
 made if we divide the elementary particles instead by their intrinsic
-spin, which is commonly done. Then an “elementary matter particle” is
-the same thing as an “elementary fermion,” and similarly for the
+spin, which is commonly done. Then an ‚Äúelementary matter particle‚Äù is
+the same thing as an ‚Äúelementary fermion,‚Äù and similarly for the
 bosons. The two terms are used interchangeably in the discussion below. 
 
 \subsubsection{Elementary Fermions}
@@ -7755,7 +7773,7 @@ be adjusted.
 
 Throughout the development of the Standard Model it was found that some
 elementary particles play a different role than the ordinary matter
-particles that make up the “stuff” of the universe. Both the gauge
+particles that make up the ‚Äústuff‚Äù of the universe. Both the gauge
 bosons and the Higgs boson fall into this group. 
 
 %\newline\\
@@ -7841,7 +7859,7 @@ The mesons are made of a quark and an antiquark pair, though not
 necessarily of the same generation.  Examples include the $\pi^+$ $|u\bar
 d\rangle$ and $K^+$ $|u\bar s\rangle$. 
 
-One of the reasons for the “zoo” of particles discovered in the past
+One of the reasons for the ‚Äúzoo‚Äù of particles discovered in the past
 century is because of the numerous possible combinations of six quarks
 put into a three-quark or two-quark hadron. Additionally, each of these
 combinations can be in different quantum mechanical states, thereby
