--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,88 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-09 15:35:36 -0500 
+%% Created for Pete Su at 2019-03-10 08:28:44 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Robinson2011,
+	Author = {Matthew Robinson},
+	Date-Added = {2019-03-10 08:26:04 -0400},
+	Date-Modified = {2019-03-10 08:26:04 -0400},
+	Doi = {10.1007/978-1-4419-8267-4},
+	Publisher = {Springer New York},
+	Title = {Symmetry and the Standard Model},
+	Url = {https://doi.org/10.1007/978-1-4419-8267-4},
+	Year = {2011},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-1-4419-8267-4}}
+
+@article{Robinson:2008ie,
+	Archiveprefix = {arXiv},
+	Author = {Robinson, Matthew B. and Bland, Karen R. and Cleaver, Gerald B. and Dittmann, Jay R.},
+	Date-Added = {2019-03-10 08:24:33 -0400},
+	Date-Modified = {2019-03-10 08:25:05 -0400},
+	Eprint = {0810.3328},
+	Note = {\href{https://arxiv.org/abs/0810.3328}{arXiv:0810.3328}},
+	Primaryclass = {hep-th},
+	Reportnumber = {BU-HEPP-08-20},
+	Slaccitation = {%%CITATION = ARXIV:0810.3328;%%},
+	Title = {{A Simple Introduction to Particle Physics. Part I - Foundations and the Standard Model}},
+	Year = {2008}}
+
+@article{Eisert:2008ur,
+	Archiveprefix = {arXiv},
+	Author = {Eisert, J. and Cramer, M. and Plenio, M. B.},
+	Date-Added = {2019-03-10 08:23:28 -0400},
+	Date-Modified = {2019-03-10 08:23:41 -0400},
+	Doi = {10.1103/RevModPhys.82.277},
+	Eprint = {0808.3773},
+	Journal = {Rev. Mod. Phys.},
+	Note = {\href{https://arxiv.org/abs/0808.3773}{https://arxiv.org/abs/0808.3773}},
+	Pages = {277-306},
+	Primaryclass = {quant-ph},
+	Slaccitation = {%%CITATION = ARXIV:0808.3773;%%},
+	Title = {{Area laws for the entanglement entropy - a review}},
+	Volume = {82},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1103/RevModPhys.82.277}}
+
+@article{Duncan2008,
+	Author = {Anthony Duncan and Michel Janssen},
+	Date-Added = {2019-03-10 08:15:48 -0400},
+	Date-Modified = {2019-03-10 08:17:17 -0400},
+	Doi = {10.1016/j.shpsb.2008.04.005},
+	Journal = {Studies in History and Philosophy of Science Part B: Studies in History and Philosophy of Modern Physics},
+	Month = {Sep},
+	Note = {\href{https://arxiv.org/abs/0709.3812}{https://arxiv.org/abs/0709.3812}},
+	Number = {3},
+	Pages = {634--666},
+	Publisher = {Elsevier {BV}},
+	Title = {{Pascual Jordan's resolution of the conundrum of the wave-particle duality of light}},
+	Url = {https://doi.org/10.1016/j.shpsb.2008.04.005},
+	Volume = {39},
+	Year = {2008},
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.shpsb.2008.04.005}}
+
+@article{Brout:1995rd,
+	Archiveprefix = {arXiv},
+	Author = {Brout, R. and Massar, S. and Parentani, R. and Spindel, Ph.},
+	Date-Added = {2019-03-10 08:13:19 -0400},
+	Date-Modified = {2019-03-10 08:13:35 -0400},
+	Doi = {10.1016/0370-1573(95)00008-5},
+	Eprint = {0710.4345},
+	Journal = {Phys. Rept.},
+	Note = {\href{https://arxiv.org/abs/0710.4345}{https://arxiv.org/abs/0710.4345}},
+	Pages = {329-454},
+	Primaryclass = {gr-qc},
+	Reportnumber = {ULB-TH95-02, UMG-MG-95-01, LPTHENS},
+	Slaccitation = {%%CITATION = ARXIV:0710.4345;%%},
+	Title = {{A Primer for black hole quantum physics}},
+	Volume = {260},
+	Year = {1995},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0370-1573(95)00008-5}}
 
 @article{Vaidman1998,
 	Author = {Lev Vaidman},
