--- a/0901.3156v1/conservative_f.tex
+++ b/0901.3156v1/conservative_f.tex
@@ -22,6 +22,19 @@
 \setlength{\oddsidemargin}{0pt}
 \setlength{\textwidth}{6.3in}
 
+\usepackage{mathpazo}
+\linespread{1.1}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true
+bookmarksopen=true,bookmarksnumbered=true]{hyperref}
+\usepackage[letterpaper, margin=1.25in]{geometry}
 
 \begin{document}
 \centerline{\LARGE Conservative solutions to the black hole information problem}
@@ -41,7 +54,7 @@
 \blankline
 \blankline
 %\blankline
-\centerline{\today}
+\centerline{January 20, 2009}
 %\blankline
 \blankline
 \blankline
@@ -86,7 +99,7 @@ null surfaces, or which are not apparent in a semiclassical treatment.
 \end{itemize}
 
 If either or both of these things are true then the  quantum theory of
-gravity attribute to weakly curved regions of space-time properties very different from those found in the semiclassical
+gravity attributes to weakly curved regions of space-time properties very different from those found in the semiclassical
 description.  Any approach to resolution of the black hole information puzzle that does not make either of these assumptions will be called
 {\it conservative.} 
 
@@ -811,8 +824,8 @@ Ontario through MRI.
 \begin{thebibliography}{99}
  
 \bibitem{Hawk74} S.~W.~Hawking, 
- {\it Black hole explosions?,} 
-Nature. {\bf 248} (5443): 30–31 (1974).
+ {\it Black hole explosions?,}
+ Nature. {\bf 248} (5443):3031 (1974).
  
 %\cite{Hawking:1976ra} 
 \bibitem{Hawking:1976ra} 
