--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-10 08:36:07 -0400 
+%% Created for Pete Su at 2019-03-10 08:48:19 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hossenfelder:2009xq,
+	Archiveprefix = {arXiv},
+	Author = {Hossenfelder, Sabine and Smolin, Lee},
+	Date-Added = {2019-03-10 08:48:05 -0400},
+	Date-Modified = {2019-03-10 08:48:19 -0400},
+	Doi = {10.1103/PhysRevD.81.064009},
+	Eprint = {0901.3156},
+	Journal = {Phys. Rev.},
+	Note = {\href{https://arxiv.org/abs/0901.3156}{https://arxiv.org/abs/0901.3156}},
+	Pages = {064009},
+	Primaryclass = {gr-qc},
+	Slaccitation = {%%CITATION = ARXIV:0901.3156;%%},
+	Title = {{Conservative solutions to the black hole information problem}},
+	Volume = {D81},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1103/PhysRevD.81.064009}}
 
 @incollection{Valentini2010,
 	Author = {Antony Valentini},
