--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-10 08:48:19 -0400 
+%% Created for Pete Su at 2019-03-11 19:31:51 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Han:2005mu,
+	Archiveprefix = {arXiv},
+	Author = {Han, Tao},
+	Booktitle = {{Physics in D >= 4. Proceedings, Theoretical Advanced Study Institute in elementary particle physics, TASI 2004, Boulder, USA, June 6-July 2, 2004}},
+	Date-Added = {2019-03-11 19:31:21 -0400},
+	Date-Modified = {2019-03-11 19:31:51 -0400},
+	Doi = {10.1142/9789812773579_0008},
+	Eprint = {hep-ph/0508097},
+	Note = {\href{https://arxiv.org/abs/hep-ph/0508097}{arXiv:0508097}},
+	Pages = {407-454},
+	Primaryclass = {hep-ph},
+	Reportnumber = {MADPH-05-1434},
+	Slaccitation = {%%CITATION = HEP-PH/0508097;%%},
+	Title = {{Collider phenomenology: Basic knowledge and techniques}},
+	Year = {2005},
+	Bdsk-Url-1 = {https://doi.org/10.1142/9789812773579_0008}}
 
 @article{Hossenfelder:2009xq,
 	Archiveprefix = {arXiv},
