--- a/0508097/collider-2005.tex
+++ b/0508097/collider-2005.tex
@@ -1,7 +1,18 @@
-\documentclass[prd,aps,floats,preprintnumbers,preprint,superscriptaddress,floatfix,nofootinbib]{revtex4}
+\documentclass[12pt,prd,aps,floats,preprintnumbers,preprint,superscriptaddress,floatfix,nofootinbib]{revtex4}
 \usepackage{graphicx, epsfig}
 \setlength{\textwidth}{170mm}
 \setlength{\textheight}{230mm}
+
+\usepackage{mathpazo}
+\linespread{1.05}
+\usepackage{hyperref}
+\urlstyle{same}
+\hypersetup{colorlinks=true}
+\hypersetup{urlcolor=blue}
+\hypersetup{linkcolor=blue}
+\hypersetup{citecolor=blue}
+\usepackage[letterpaper, margin=1.5in]{geometry}
+
 %
 %\def\baselinestretch{1.0}
 %\oddsidemargin -1.2mm
@@ -427,9 +438,9 @@ of a spin-0 state (Higgs-like) is highly suppressed.  For a higher spin state,
 such as spin-2, the resonant production will have to go through a higher
 partial wave. 
 
-\begin{figure}[t,b]
+\begin{figure}[tb]
 %\psfig{figure=epem_sm.ps,height=5in}
-\psfig{figure=epem_sm-hepph.ps,height=5in}
+\includegraphics[height=5in]{epem_sm-hepph.pdf}
 \caption{Scattering cross sections versus c.m.~energy for the SM processes in $e^+e^-$
 collisioins. The Higgs boson mass has been taken as 120 GeV.}
 \label{fig:epem}
@@ -750,7 +761,7 @@ QCD,  or the excellent text \cite{esw} on thesse topics.
 
 \begin{center}
 \begin{figure}[tb]
-\psfig{figure=xq-vs-x.ps,height=3.2in}
+\psfig{figure=xq-vs-x.pdf,height=3.2in}
 \caption{Parton momentum distributions versus their energy fraction $x$ at two
 different factorization scales, from CTEQ-5. }
 \label{fig:pdfs}
@@ -778,7 +789,7 @@ mediated via sea quarks and gluons.
 
 \begin{center}
 \begin{figure}[tb]
-\psfig{figure=hadron_sm.ps,height=5in}
+\psfig{figure=hadron_sm.pdf,height=4in}
 \caption{Scattering cross sections versus c.m.~energy
 for the SM processes in $pp$ collisioins. 
  The Higgs boson mass has been taken as 120 GeV.}
@@ -1502,7 +1513,7 @@ c.m.~energy.
 \begin{center}
 \begin{figure}[tb]
 %\psfig{figure=prlZ.eps,height=3in}
-\psfig{figure=mee-d0.ps,height=3.5in}
+\psfig{figure=mee-d0.pdf,height=3.5in}
 \caption{The resonant signal for a $Z$ boson via $Z\to \epem$
 at the D0 detector.}
 \label{Zee}
@@ -2216,7 +2227,7 @@ basket ball.
 
 \begin{center}
 \begin{figure}[tb]
-\psfig{figure=dps3.ps,height=3.6in}
+\psfig{figure=dps3.pdf,height=3.6in}
 \caption{Three-body phase space weight as a function of $E_i\ (i=1,2,3)$
 for $\sqrt s=100\ \gev,\ m_{1,2,3}=10,20,30\ \gev$, respectively.
 \label{3body}}
@@ -2419,7 +2430,8 @@ FERMILAB-TM-2158.
 
 \bibitem{muon}
 V.D. Barger, M.S. Berger, J.F. Gunion, and T.~Han, 
-Phys.~Rept.~{\bf 286}, 1 (1997).%[{\tt arXiv:hep-ph/9602415}].
+Phys.~Rept.~{\bf 286}, 1 (1997).
+%[{\tt arXiv:hep-ph/9602415}].
 
 \bibitem{gamma} I.F.~Ginzburg, G.L.~Kotkin, S.L.~Panfil, V.G.~Serbo,
 and V.I.~Telnov, Nucl. Instr. and Methods in Phys. Res. {\bf  219}, 5 (1984).
@@ -2440,7 +2452,11 @@ G. Moortgat-Pick {\it et al.}. {\tt  arXiv:hep-ph/0507011}.
 \bibitem{george}G.~Sterman, {\it QCD and Jets},  these TASI lectures.
 {\tt arxive:hep-ph/0412013}.
 
-\bibitem{cteq5}  H.~L.~Lai {\it et al.}  [CTEQ Collaboration],  %``Global {QCD} analysis of parton structure of the nucleon: CTEQ5 parton  %distributions,''  Eur.\ Phys.\ J.~{\bf C12}, 375 (2000).
+\bibitem{cteq5}
+  H.~L.~Lai {\it et al.}  [CTEQ Collaboration],
+  %``Global {QCD} analysis of parton structure of the nucleon: CTEQ5 parton
+  %distributions,''
+  Eur.\ Phys.\ J.~{\bf C12}, 375 (2000).
 
 \bibitem{ttwu} H.~Cheng and T.T.~Wu, Phys.~Rev.~Lett.~{\bf 24}, 1456 (1970).
 
@@ -2453,7 +2469,8 @@ G. Moortgat-Pick {\it et al.}. {\tt  arXiv:hep-ph/0507011}.
 \bibitem{ggh} 
 R.V.~Harlander and W.B.~Kilgore,  Phys.~Rev.~Lett. {\bf 88}, 201801 (2002);
 % e-Print Archive: hep-ph/0201206 
- C.~Anastasiou and K.~Melnikov, Nucl.~Phys.~{\bf B646}, 220 (2002).%e-Print Archive: hep-ph/0207004 
+ C.~Anastasiou and K.~Melnikov, Nucl.~Phys.~{\bf B646}, 220 (2002).
+%e-Print Archive: hep-ph/0207004 
 
 \bibitem{vvh} T.~Han, G.~Valencia, and S.~Willenbrock,
 Phys.~Rev.~Lett.~{\bf 69}, 3274 (1992);  
@@ -2497,7 +2514,8 @@ T.~Han, G.~Ladinsky, R.~Rosenfeld, and C.-P. Yuan,
 Phys.~Rev.~{\bf D49}, 1246 (1994); {\it ibid}, {\bf D52}, 3878 (1995).
 
 \bibitem{dieter} 
-V.~Barger, R.J.N.~Phillips, and D.~Zeppenfeld,Phys.~Lett.~{\bf B346}, 106 (1995); 
+V.~Barger, R.J.N.~Phillips, and D.~Zeppenfeld,
+Phys.~Lett.~{\bf B346}, 106 (1995); 
 D.~Rainwater, D.~Zeppenfeld, and K.~Hagiwara,
 Phys.~Rev.~{\bf D59}, 014037 (1999).
 
@@ -2521,32 +2539,65 @@ Phys.\ Rev.\ {\bf D54}, 1078 (1996).
 T.~Han,  H.E.~Logan, and L.-T. Wang,  {\tt arXiv:hep-ph/0506313}.
 
 \bibitem{zprime} 
-J.~L.~Hewett and T.~G.~Rizzo,  %``Low-Energy Phenomenology Of Superstring Inspired E(6) Models,''  Phys.\ Rept.\  {\bf 183}, 193 (1989);  M.~Cvetic and P.~Langacker,  %``General Signatures Of Superstring Theories,''  Phys.\ Rev.\ {\bf D42}, 1797 (1990).
+J.~L.~Hewett and T.~G.~Rizzo,
+  %``Low-Energy Phenomenology Of Superstring Inspired E(6) Models,''
+  Phys.\ Rept.\  {\bf 183}, 193 (1989);  M.~Cvetic and P.~Langacker,
+  %``General Signatures Of Superstring Theories,''
+  Phys.\ Rev.\ {\bf D42}, 1797 (1990).
 
 \bibitem{LH2}
-G.~Burdman, M.~Perelstein and A.~Pierce,  %``Collider tests of the little Higgs model,''  Phys.\ Rev.\ Lett.\  {\bf 90}, 241802 (2003)  [Erratum-ibid.\  {\bf 92}, 049903 (2004)].
+G.~Burdman, M.~Perelstein and A.~Pierce,
+  %``Collider tests of the little Higgs model,''
+  Phys.\ Rev.\ Lett.\  {\bf 90}, 241802 (2003)
+  [Erratum-ibid.\  {\bf 92}, 049903 (2004)].
 
-\bibitem{LH1}  T.~Han, H.~E.~Logan, B.~McElrath and L.~T.~Wang,  %``Phenomenology of the little Higgs model,''  Phys.\ Rev.\  {\bf D67}, 095004 (2003).
+\bibitem{LH1}
+  T.~Han, H.~E.~Logan, B.~McElrath and L.~T.~Wang,
+  %``Phenomenology of the little Higgs model,''
+  Phys.\ Rev.\  {\bf D67}, 095004 (2003).
 
 \bibitem{TC}
- E.~Eichten, K.~D.~Lane and J.~Womersley,  %``Finding low-scale technicolor at hadron colliders,''  Phys.\ Lett.\  {\bf B405}, 305 (1997).
+ E.~Eichten, K.~D.~Lane and J.~Womersley,
+  %``Finding low-scale technicolor at hadron colliders,''
+  Phys.\ Lett.\  {\bf B405}, 305 (1997).
  
 \bibitem{RS}
-H.~Davoudiasl, J.~L.~Hewett and T.~G.~Rizzo,  %``Experimental probes of localized gravity: On and off the wall,''  Phys.\ Rev.\  {\bf D63}, 075004 (2001);
- B.~C.~Allanach, K.~Odagiri, M.~J.~Palmer, M.~A.~Parker, A.~Sabetfakhri and B.~R.~Webber,  %``Exploring small extra dimensions at the Large Hadron Collider,''  JHEP {\bf 0212}, 039 (2002).
+H.~Davoudiasl, J.~L.~Hewett and T.~G.~Rizzo,
+  %``Experimental probes of localized gravity: On and off the wall,''
+  Phys.\ Rev.\  {\bf D63}, 075004 (2001);
+ B.~C.~Allanach, K.~Odagiri, M.~J.~Palmer, M.~A.~Parker, A.~Sabetfakhri and B.~R.~Webber,
+  %``Exploring small extra dimensions at the Large Hadron Collider,''
+  JHEP {\bf 0212}, 039 (2002).
 
-\bibitem{herbi2}  H.~K.~Dreiner and G.~G.~Ross,  %``R-parity violation at hadron colliders,''  Nucl.\ Phys.\  {\bf B365}, 597 (1991);   E.~L.~Berger, B.~W.~Harris and Z.~Sullivan,  %``Single-top-squark production via R-parity-violating supersymmetric  %couplings in hadron collisions,''  Phys.\ Rev.\ Lett.\  {\bf 83}, 4472 (1999);
-T.~Plehn,   %``Single stop production at hadron colliders,''  Phys.\ Lett.\  {\bf B488}, 359 (2000).
+\bibitem{herbi2}
+  H.~K.~Dreiner and G.~G.~Ross,
+  %``R-parity violation at hadron colliders,''
+  Nucl.\ Phys.\  {\bf B365}, 597 (1991); 
+  E.~L.~Berger, B.~W.~Harris and Z.~Sullivan,
+  %``Single-top-squark production via R-parity-violating supersymmetric
+  %couplings in hadron collisions,''
+  Phys.\ Rev.\ Lett.\  {\bf 83}, 4472 (1999);
+T.~Plehn, 
+  %``Single stop production at hadron colliders,''
+  Phys.\ Lett.\  {\bf B488}, 359 (2000).
 
 \bibitem{WWSUSY}
- D.~Choudhury, A.~Datta, K.~Huitu, P.~Konar, S.~Moretti and B.~Mukhopadhyaya,  %``Slepton production from gauge boson fusion,''  Phys.\ Rev.\  {\bf D68}, 075007 (2003);
- P.~Konar and B.~Mukhopadhyaya,  %``Gauge boson fusion as a probe of inverted hierarchies in supersymmetry,''  Phys.\ Rev.\  {\bf D70}, 115011 (2004).
+ D.~Choudhury, A.~Datta, K.~Huitu, P.~Konar, S.~Moretti and B.~Mukhopadhyaya,
+  %``Slepton production from gauge boson fusion,''
+  Phys.\ Rev.\  {\bf D68}, 075007 (2003);
+ P.~Konar and B.~Mukhopadhyaya,
+  %``Gauge boson fusion as a probe of inverted hierarchies in supersymmetry,''
+  Phys.\ Rev.\  {\bf D70}, 115011 (2004).
  
 \bibitem{dicus}
- R.~Vega and D.~A.~Dicus,  %``Doubly Charged Higgs And W+ W+ Production,''  Nucl.\ Phys.\  {\bf B329}, 533 (1990).
+ R.~Vega and D.~A.~Dicus,
+  %``Doubly Charged Higgs And W+ W+ Production,''
+  Nucl.\ Phys.\  {\bf B329}, 533 (1990).
  
 \bibitem{Mike}
- M.~Perelstein, M.~E.~Peskin and A.~Pierce,  %``Top quarks and electroweak symmetry breaking in little Higgs models,''  Phys.\ Rev.\  {\bf D69}, 075002 (2004).
+ M.~Perelstein, M.~E.~Peskin and A.~Pierce,
+  %``Top quarks and electroweak symmetry breaking in little Higgs models,''
+  Phys.\ Rev.\  {\bf D69}, 075002 (2004).
  
 \bibitem{cascade}
 H.~Baer, X.~Tata, and J.~Woodside, Phys.~Rev.~Lett.~{\bf 63}, 352 (1989).
@@ -2555,19 +2606,42 @@ H.~Baer, X.~Tata, and J.~Woodside, Phys.~Rev.~Lett.~{\bf 63}, 352 (1989).
  H.E.~Haber and G.L.~Kane, Phys.~Rept.~{\bf 117}, 75 (1985).
 
 \bibitem{GRW-HLZ}
-  G.~F.~Giudice, R.~Rattazzi and J.~D.~Wells,  %``Quantum gravity and extra dimensions at high-energy colliders,''  Nucl.\ Phys.\  {\bf B544}, 3 (1999);   T.~Han, J.~D.~Lykken and R.~J.~Zhang,  %``On Kaluza-Klein states from large extra dimensions,''  Phys.\ Rev.~{\bf D59}, 105006 (1999); 
- E.~A.~Mirabelli, M.~Perelstein and M.~E.~Peskin,  %``Collider signatures of new large space dimensions,''  Phys.\ Rev.\ Lett.\  {\bf 82}, 2236 (1999).
+  G.~F.~Giudice, R.~Rattazzi and J.~D.~Wells,
+  %``Quantum gravity and extra dimensions at high-energy colliders,''
+  Nucl.\ Phys.\  {\bf B544}, 3 (1999); 
+  T.~Han, J.~D.~Lykken and R.~J.~Zhang,
+  %``On Kaluza-Klein states from large extra dimensions,''
+  Phys.\ Rev.~{\bf D59}, 105006 (1999); 
+ E.~A.~Mirabelli, M.~Perelstein and M.~E.~Peskin,
+  %``Collider signatures of new large space dimensions,''
+  Phys.\ Rev.\ Lett.\  {\bf 82}, 2236 (1999).
 
 \bibitem{UED}
-  T.~Appelquist, H.~C.~Cheng and B.~A.~Dobrescu,  %``Bounds on universal extra dimensions,''  Phys.\ Rev.~ {\bf D64}, 035002 (2001);
-  H.~C.~Cheng, K.~T.~Matchev and M.~Schmaltz,  %``Bosonic supersymmetry? Getting fooled at the LHC,''  Phys.\ Rev.\ {\bf D66}, 056006 (2002).
+  T.~Appelquist, H.~C.~Cheng and B.~A.~Dobrescu,
+  %``Bounds on universal extra dimensions,''
+  Phys.\ Rev.~ {\bf D64}, 035002 (2001);
+  H.~C.~Cheng, K.~T.~Matchev and M.~Schmaltz,
+  %``Bosonic supersymmetry? Getting fooled at the LHC,''
+  Phys.\ Rev.\ {\bf D66}, 056006 (2002).
  
 \bibitem{T-P}
-  H.~C.~Cheng and I.~Low,  %``TeV symmetry and the little hierarchy problem,''  JHEP {\bf 0309}, 051 (2003);   J.~Hubisz and P.~Meade,  %``Phenomenology of the littlest Higgs with T-parity,''  Phys.\ Rev.\  {\bf D71}, 035016 (2005).  
+  H.~C.~Cheng and I.~Low,
+  %``TeV symmetry and the little hierarchy problem,''
+  JHEP {\bf 0309}, 051 (2003); 
+  J.~Hubisz and P.~Meade,
+  %``Phenomenology of the littlest Higgs with T-parity,''
+  Phys.\ Rev.\  {\bf D71}, 035016 (2005).  
 
 \bibitem{endpoint}
-I.~Hinchliffe and F.~E.~Paige,  %``Measurements in gauge mediated SUSY breaking models at LHC,''  Phys.\ Rev.\  {\bf D60}, 095002 (1999);H.~Bachacou, I.~Hinchliffe and F.~E.~Paige,  %``Measurements of masses in SUGRA models at LHC,''  Phys.\ Rev.\  {\bf D62}, 015009 (2000); 
- K.~Kawagoe, M.~M.~Nojiri and G.~Polesello,  %``A new SUSY mass reconstruction method at the CERN LHC,''  Phys.\ Rev.\  {\bf D71}, 035008 (2005). 
+I.~Hinchliffe and F.~E.~Paige,
+  %``Measurements in gauge mediated SUSY breaking models at LHC,''
+  Phys.\ Rev.\  {\bf D60}, 095002 (1999);
+H.~Bachacou, I.~Hinchliffe and F.~E.~Paige,
+  %``Measurements of masses in SUGRA models at LHC,''
+  Phys.\ Rev.\  {\bf D62}, 015009 (2000); 
+ K.~Kawagoe, M.~M.~Nojiri and G.~Polesello,
+  %``A new SUSY mass reconstruction method at the CERN LHC,''
+  Phys.\ Rev.\  {\bf D71}, 035008 (2005). 
  
 \end{thebibliography}
 
