--- a/0902.3005v1/Paper2a.tex
+++ b/0902.3005v1/Paper2a.tex
@@ -2,6 +2,27 @@
 \usepackage{epsfig}
 \usepackage{amsmath}
 \usepackage{amssymb}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
+%\tolerance=5000
+
 %
 \begin{document}
 \begin{center}
@@ -41,6 +62,7 @@ there seems to be no way around it.
 %
 \section{Introduction}
 %
+{\tolerance=1000
 Ever since it was proposed more than 80 years ago,
 quantum mechanics has raised great challenges both
 in foundations and in applications.  The latter have
@@ -51,7 +73,8 @@ and important discoveries have also been made in foundations,
 though at a much slower rate.  The measurement
 problem, long-distance correlations, and the meaning
 of the state vector are three of the foundational
-problems on which there has been and still is lively debate.
+problems on which there has been and still is lively debate.\par
+}
 
 It is fair to say that foundational studies have
 largely contributed to the burgeoning of quantum
@@ -155,8 +178,8 @@ interventions into nature''~\cite{fuchs2}.  This
 is often set in the framework of a Bayesian approach,
 where probability is interpreted in a subjective way.
 
-The epistemic view also addresses the notorious
-measurement problem.  Broadly speaking, the problem
+The epistemic view also addresses the
+measurement problem. Broadly speaking, the problem
 is the following.  Suppose we want to describe, in a
 completely quantum-mechanical way, the process of
 measuring a physical quantity $Q$ pertaining to a
@@ -170,6 +193,7 @@ Let $|\alpha_0 \rangle$ denote the initial state of the
 apparatus.  The interaction will represent a faithful
 measurement of $Q$ if the combined system evolves like
 %
+
 \begin{equation}
 |q_i \rangle |\alpha_0 \rangle \rightarrow
 |q_i \rangle |\alpha_i \rangle ,
@@ -180,6 +204,7 @@ apparatus wherein the pointer shows the value
 $\alpha_i$ (with $\alpha_i \neq \alpha_j$ 
 if $i \neq j$).
 
+\fussy
 If the Schr\"{o}dinger equation is universally
 valid, the combined evolution of the microscopic
 system and macroscopic apparatus is unitary (assuming,
@@ -543,6 +568,7 @@ fact that even very familiar theories can in general
 be interpreted in more than one way.  A simple
 example is classical mechanics.
 
+\tolerance=1000
 Classical mechanics is based on a well-defined mathematical
 structure.  This consists of constants $m_i$, functions
 $\mathbf{r}_i (t)$, and vector fields $\mathbf{F}_i$
@@ -581,6 +607,7 @@ interact at a distance in a vacuum, or a
 genuine gravitational field is produced throughout
 space, the theory can be held as truly realized.
 
+\tolerance=1000
 Similar remarks apply to classical electromagnetism.
 The mathematical equations can be interpreted
 as referring to charges and currents interacting
