--- a/0904.0815/Tpl_info.tex
+++ b/0904.0815/Tpl_info.tex
@@ -1,11 +1,19 @@
 %---------------------------------------------------------------------------------------------------------------------------
-\documentclass[prd, groupedaddress, showpacs, showkeys, onecolumn, nofootinbib]{revtex4}
+\documentclass[groupedaddress, showpacs, showkeys, onecolumn, nofootinbib, 12pt]{revtex4}
 %\documentclass[12pt]{article}
 %---------------------------------------------------------------------------------------------------------------------------
 \usepackage{amsfonts, amssymb, amsmath, amsthm, amscd}
 \usepackage{graphicx}
 % Include figure files
+\usepackage{mathpazo}
+\linespread{1.05}
 \usepackage{hyperref}
+\urlstyle{same}
+\hypersetup{colorlinks=true}
+\hypersetup{urlcolor=blue}
+\hypersetup{linkcolor=blue}
+\hypersetup{citecolor=blue}
+\usepackage[letterpaper, margin=1.5in]{geometry}
 \usepackage{bm}
 % bold math
 \usepackage{enumerate}
@@ -15,6 +23,38 @@
 \usepackage{amsfonts}%
 \usepackage{mathrsfs}     %script fonts
 %----------------------------------------------------------------
+
+\makeatletter
+
+\def\small{%
+  \@setfontsize\small\@xipt{12pt}%
+  \abovedisplayskip 8\p@ \@plus3\p@ \@minus6\p@
+  \belowdisplayskip \abovedisplayskip
+  \abovedisplayshortskip \z@ \@plus3\p@
+  \belowdisplayshortskip 6.5\p@ \@plus3.5\p@ \@minus3\p@
+  \def\@listi{%
+    \leftmargin\leftmargini
+    \topsep 9\p@ \@plus3\p@ \@minus5\p@
+    \parsep 4.5\p@ \@plus2\p@ \@minus\p@
+    \itemsep \parsep
+  }%
+}%
+ \def\footnotesize{%
+  \@setfontsize\footnotesize\@xpt{12pt}%
+  \abovedisplayskip 10\p@ \@plus2\p@ \@minus5\p@
+  \belowdisplayskip \abovedisplayskip
+  \abovedisplayshortskip \z@ \@plus3\p@
+  \belowdisplayshortskip 6\p@ \@plus3\p@ \@minus3\p@
+  \def\@listi{%
+    \leftmargin\leftmargini
+    \topsep 6\p@ \@plus2\p@ \@minus2\p@
+    \parsep 3\p@ \@plus2\p@ \@minus\p@
+    \itemsep \parsep
+  }%
+}%
+
+\makeatother
+
 \begin{document} %revtex
 %----------------------------------------------------------------
 \title{Linking the trans-Planckian and information loss problems in black hole physics}
@@ -34,9 +74,9 @@
 %-------------------------------------------------------------------------
 \affiliation{Universit\`a degli Studi di Udine, Via delle Scienze 208, 33100 Udine, Italy}
 %-------------------------------------------------------------------------
-\date{July 25, 2009; \LaTeX-ed: \today}
+\date{July 25, 2009}
 %-------------------------------------------------------------------------
-\bigskip
+\bigskip\sloppy
 %-------------------------------------------------------------------------
 \begin{abstract}
 %-------------------------------------------------------------------------
@@ -97,11 +137,10 @@ p(u)\approx v_{\rm H} - A\e^{-\kappa u}\;,
 \end{eqnarray}
 %
 that holds for large values of $u$ under the assumption that a horizon forms at $u=+\infty$, $v=v_{\rm H}$ (here $\kappa=1/(4M)$ is the surface gravity, and $A>0$ is a constant that depends on the details of collapse), one finds the standard result for Hawking radiation, $\omega_0\sim \kappa$.  A more accurate analysis~\cite{Hawking:1974sw, Birrell:1982ix, Novikov:1989sz} shows that on $\scri^+$ there is a thermal flux of particles at temperature $\kappa/2\pi$.
-\vskip 1.5cm
 %
-\begin{figure}[htb]
+\begin{figure}[tb]
 \begin{center}
-\includegraphics[width=8.5cm]{figura.eps}
+\includegraphics[width=9.5cm]{figura.pdf}
 \end{center}
 \caption{Conformal diagram describing gravitational collapse followed by Hawking evaporation.  The detail shows the region in which a wavepacket in the collapsing configuration (solid thick line) interacts gravitationally with a Hawking mode (dotted line).}
 \label{figure1}
@@ -118,13 +157,11 @@ Hawking's result relies on the key assumption that quantum field theory continue
 This trans-Planckian problem is unavoidable if an horizon forms (even only asymptotically~\cite{Barcelo:2006np, Barcelo:2006uw}).  Let $R$ be the Schwarzschild coordinate corresponding to the surface of the collapsing star, and let $\sf P$ be an event on that surface (see Fig.~\ref{figure1}).  $\sf P$ can be labeled by the null coordinates $u=t-R_\ast$ and $v=t+R_\ast$, where $R_\ast=R+2M\ln\left(R-2M\right)+\mbox{const}=\left(v-u\right)/2$ is Wheeler's tortoise coordinate.  In the limit $u\to +\infty$, $R\to 2M$, and $v$ tends to a finite value.  Hence, for large values of $u$, $(R-2M)\propto \mathrm{e}^{-\kappa u}\propto 1/\Omega_0(u)$. Therefore, modes of arbitrary frequency on $\scri^-$ are eventually excited when the surface of the star is sufficiently close to the location of the would-be horizon.  Hawking radiation detected on $\scri^+$ at late times is due to modes skimming the horizon arbitrarily closely, hence trans-Planckian on $\scri^-$.
 
 There have been several attempts to eliminate this problem by suitable assumptions about the UV completion of the theory, trying at the same time to understand how sensitive Hawking radiation is to such assumptions~\cite{Brout:1995wp, Corley:1996ar, Barrabes:1998iw, Parentani:1999qv, Barrabes:2000fr, Parentani:2000ts, Parentani:2007mb, Unruh:2004zk}.  It should be noted, however, that the existence of a trans-Planckian problem as defined above does not necessarily imply that trans-Planckian physics affects gravitational collapse and/or the production of Hawking radiation.  In fact, explicit calculations~\cite{Massar:1996tx,Giddings:2006sj} show that the presence of Hawking modes does not alter appreciably the behaviour of collapsing matter, in agreement with the common lore that a freely-falling observer will not detect a substantial amount of radiation even in a neighbourhood of the horizon (see also~\cite{Barcelo:2007yk}).
-\vskip 1.5cm
 %
-\begin{figure}[htb]
+\begin{figure}[tb]
 \begin{center}
-\includegraphics[width=4cm]{slices.eps}
+\includegraphics[width=6cm]{slices.pdf}
 \end{center}
-\vskip 2.3cm
 \caption{Conformal diagram describing gravitational collapse followed by Hawking evaporation.  If no leftover remains and Hawking radiation is always thermal, the state on the time slice C is mixed even if it was pure on the time slices A and B.}
 \label{figure2}
 \end{figure}
