--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,43 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-12 08:20:52 -0400 
+%% Created for Pete Su at 2019-03-15 11:59:58 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Marchildon2009,
+	Author = {Louis Marchildon},
+	Booktitle = {2009 Third International Conference on Quantum, Nano and Micro Technologies},
+	Date-Added = {2019-03-15 11:59:06 -0400},
+	Date-Modified = {2019-03-15 11:59:43 -0400},
+	Doi = {10.1109/icqnm.2009.12},
+	Month = {Feb},
+	Note = {\href{https://arxiv.org/abs/0902.3005v1}{arXiv:0902.3005v1}},
+	Publisher = {{IEEE}},
+	Title = {Does Quantum Mechanics Need Interpretation?},
+	Url = {https://doi.org/10.1109/icqnm.2009.12},
+	Year = {2009},
+	Bdsk-Url-1 = {https://doi.org/10.1109/icqnm.2009.12}}
+
+@article{Liberati:2009ak,
+	Archiveprefix = {arXiv},
+	Author = {Liberati, Stefano and Sindoni, Lorenzo and Sonego, Sebastiano},
+	Date-Added = {2019-03-15 11:57:50 -0400},
+	Date-Modified = {2019-03-15 11:58:15 -0400},
+	Doi = {10.1007/s10714-009-0899-2},
+	Eprint = {0904.0815},
+	Journal = {Gen. Rel. Grav.},
+	Note = {\href{https://arxiv.org/abs/0904.0815v2}{arXiv:0904.0815v2}},
+	Pages = {1139-1152},
+	Primaryclass = {gr-qc},
+	Slaccitation = {%%CITATION = ARXIV:0904.0815;%%},
+	Title = {{Linking the trans-Planckian and the information loss problems in black hole physics}},
+	Volume = {42},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s10714-009-0899-2}}
 
 @book{Luciano2016,
 	Author = {Maiani, Luciano and Rolandi, Luigi},
