guts.arxiv.2.pdf

--- a/0904.1556/guts.arxiv.2.tex
+++ b/0904.1556/guts.arxiv.2.tex
@@ -4,7 +4,7 @@
 % April 28, 2010 - JH
 % revised arXiv version
 
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage{amsfonts,amssymb}
 \usepackage{xy}
 \usepackage[breaklinks=true]{hyperref}
@@ -13,6 +13,15 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 
+\usepackage{mathptm}
+\linespread{1.05}
+\usepackage{hyperref}
+\urlstyle{same}
+\hypersetup{colorlinks=true}
+\hypersetup{urlcolor=blue}
+\hypersetup{linkcolor=blue}
+\hypersetup{citecolor=blue}
+\sloppy
 \hfuzz=6pt
 
 %xypic junk
@@ -136,6 +145,8 @@
 	\pagestyle{plain}
 	\pagenumbering{arabic}
 
+\usepackage[letterpaper, margin=1.35in]{geometry}
+
 \title{The Algebra of Grand Unified Theories} 
 
 \author{John Baez and John Huerta \\
@@ -144,7 +155,7 @@ Department of Mathematics \\
 University of California \\
 Riverside, CA 92521 USA 
 }
-\date{\today}
+\date{ 1 May 2010}
 
 \begin{document}
 
@@ -491,7 +502,7 @@ attracted.  We depict this process with a diagram:
 
 \vskip 1em
 \begin{center}
-	\includegraphics[scale=0.75]{exchange}
+	\includegraphics[scale=0.75]{exchange.ps}
 \end{center}
 \vskip 1em
 
