--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-15 11:59:58 -0400 
+%% Created for Pete Su at 2019-03-15 12:15:05 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Baez:2009dj,
+	Archiveprefix = {arXiv},
+	Author = {Baez, John C. and Huerta, John},
+	Date-Added = {2019-03-15 12:14:45 -0400},
+	Date-Modified = {2019-03-15 12:15:05 -0400},
+	Doi = {10.1090/S0273-0979-10-01294-2},
+	Eprint = {0904.1556},
+	Journal = {Bull. Am. Math. Soc.},
+	Note = {\href{https://arxiv.org/abs/0904.1556}{arXiv:0904.1556}},
+	Pages = {483-552},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = ARXIV:0904.1556;%%},
+	Title = {{The Algebra of Grand Unified Theories}},
+	Volume = {47},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1090/S0273-0979-10-01294-2}}
 
 @inproceedings{Marchildon2009,
 	Author = {Louis Marchildon},
