--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-15 12:15:05 -0400 
+%% Created for Pete Su at 2019-03-15 12:21:19 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Braunstein:2009gv,
+	Archiveprefix = {arXiv},
+	Author = {Braunstein, Samuel L. and Sommers, Hans-Jurgen and Zyczkowski, Karol},
+	Date-Added = {2019-03-15 12:20:47 -0400},
+	Date-Modified = {2019-03-15 12:21:07 -0400},
+	Eprint = {0907.0739},
+	Note = {\href{https://arxiv.org/abs/0907.0739}{https://arxiv.org/abs/0907.0739}},
+	Primaryclass = {quant-ph},
+	Slaccitation = {%%CITATION = ARXIV:0907.0739;%%},
+	Title = {{Entangled black holes as ciphers of hidden information}},
+	Year = {2009}}
 
 @article{Baez:2009dj,
 	Archiveprefix = {arXiv},
