--- a/0907.1190v2/arXiv.tex
+++ b/0907.1190v2/arXiv.tex
@@ -1,5 +1,23 @@
-\documentclass[twocolumn,aps,prl]{revtex4}
+\documentclass[aps,12pt]{revtex4}
 % \documentclass[twocolumn,aps,prb,amsmath,amssymb,floatfix]{revtex4}
+
+\usepackage{mathpazo}
+\linespread{1.05}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[letterpaper, margin=1.25in]{geometry}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
