--- a/bib.bib
+++ b/bib.bib
@@ -1,22 +1,76 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-15 12:25:12 -0400 
+%% Created for Pete Su at 2019-03-15 12:58:50 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@article{Braunstein:2009gv,
+@article{VanRaamsdonk:2009ar,
+	Archiveprefix = {arXiv},
+	Author = {Van Raamsdonk, Mark},
+	Date-Added = {2019-03-15 12:58:24 -0400},
+	Date-Modified = {2019-03-15 12:58:50 -0400},
+	Eprint = {0907.2939},
+	Note = {\href{https://arxiv.org/abs/0907.2939}{arXiv:0907.2939}},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = ARXIV:0907.2939;%%},
+	Title = {{Comments on quantum gravity and entanglement}},
+	Year = {2009}}
+
+@article{Braunstein:2013my,
+	Archiveprefix = {arXiv},
+	Author = {Braunstein, Samuel L. and Pirandola, Stefano and {\.Z}yczkowski, Karol},
+	Date-Added = {2019-03-15 12:54:52 -0400},
+	Date-Modified = {2019-03-15 12:54:52 -0400},
+	Doi = {10.1103/PhysRevLett.110.101301},
+	Eprint = {0907.1190},
+	Journal = {Phys. Rev. Lett.},
+	Note = {\href{https://arxiv.org/abs/0907.1190v3}{arXiv:0907.1190v3}},
+	Number = {10},
+	Pages = {101301},
+	Primaryclass = {quant-ph},
+	Slaccitation = {%%CITATION = ARXIV:0907.1190;%%},
+	Title = {{Better Late than Never: Information Retrieval from Black Holes}},
+	Volume = {110},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1103/PhysRevLett.110.101301}}
+
+@article{Braunstein:2009b,
 	Archiveprefix = {arXiv},
 	Author = {Braunstein, Samuel L. and Sommers, Hans-Jurgen and Zyczkowski, Karol},
-	Date-Added = {2019-03-15 12:20:47 -0400},
-	Date-Modified = {2019-03-15 12:21:07 -0400},
+	Date-Added = {2019-03-15 12:52:38 -0400},
+	Date-Modified = {2019-03-15 12:56:56 -0400},
 	Eprint = {0907.0739},
 	Note = {\href{https://arxiv.org/abs/0907.0739}{https://arxiv.org/abs/0907.0739}},
 	Primaryclass = {quant-ph},
 	Slaccitation = {%%CITATION = ARXIV:0907.0739;%%},
+	Title = {{Entangled black holes as ciphers of hidden information}},
+	Year = {2009}}
+
+@article{Braunstein:2009a,
+	Archiveprefix = {arXiv},
+	Author = {Braunstein, Samuel L.},
+	Date-Added = {2019-03-15 12:49:25 -0400},
+	Date-Modified = {2019-03-15 12:55:38 -0400},
+	Eprint = {0907.1190v1},
+	Note = {\href{https://arxiv.org/abs/0907.1190v1}{arXiv:0907.1190v1}},
+	Primaryclass = {quant-ph},
+	Slaccitation = {%%CITATION = ARXIV:0907.1190;%%},
+	Title = {{Black hole entropy as entropy of entanglement, or it's curtains for the equivalence principle}},
+	Year = {2009},
+	Bdsk-Url-1 = {https://doi.org/10.1103/PhysRevLett.110.101301}}
+
+@article{Braunstein:2009c,
+	Archiveprefix = {arXiv},
+	Author = {Braunstein, Samuel L.  and Zyczkowski, Karol},
+	Date-Added = {2019-03-15 12:20:47 -0400},
+	Date-Modified = {2019-03-15 12:57:01 -0400},
+	Eprint = {0907.1190v2},
+	Note = {\href{https://arxiv.org/abs/0907.1190v2}{https://arxiv.org/abs/0907.1190v2}},
+	Primaryclass = {quant-ph},
 	Title = {{Entangled black holes as ciphers of hidden information}},
 	Year = {2009}}
 
